# annotated-transformer

./: .gitignore  Positional_encodings.py  README.md  poetry.toml  pyproject.toml  the_annotated_transformer.py
