[tool.poetry]
authors = ["H. Felix Wittmann <hfwittmann@gmail.com>"]
description = ""
name = "myannotated-transformer"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
altair = "^5.1.2"
black = "^23.11.0"
flake8 = "^6.1.0"
gputil = "^1.4.0"
ipykernel = "^6.27.0"
jupytext = "^1.15.2"
pandas = "^2.1.3"
portalocker = "^2.8.2"
python = "^3.11"
spacy = "^3.7.2"
torch = "^2.1.1"
torchdata = "^0.7.1"
torchtext = "^0.16.1"
wandb = "^0.16.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
